fixed spacing issues according to PR feedback, part 2

--- a/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
+++ b/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
@@ -154,7 +154,8 @@
   border-top: 1px solid #dcdee0;
   padding-left: 7.2rem;
   padding-right: 7.2rem;
-  @include u-padding-y(5);
+  @include u-padding-top(5);
+  @include u-padding-bottom(2);
   @include u-margin-top(2);
 }
 
